--- a/VisualGGPK2/App.xaml
+++ b/VisualGGPK2/App.xaml
@@ -10,8 +10,11 @@
             <ResourceDictionary.MergedDictionaries>
                 <!--<ui:ThemesDictionary Theme="Dark" />-->
                 <ui:ThemesDictionary ApplicationTheme="Light" />
-                <!--<ui:ThemesDictionary Theme="Unknown" />-->
-                <!--<ui:ThemesDictionary Theme="vLight" />-->
+                <ResourceDictionary Source="/ICSharpCode.AvalonEdit;component/TextEditor.xaml" />
+                <ResourceDictionary Source="/ICSharpCode.AvalonEdit;component/Search/DropDownButton.xaml" />
+                <ResourceDictionary Source="/ICSharpCode.AvalonEdit;component/Search/SearchPanel.xaml" />
+                <ResourceDictionary Source="/ICSharpCode.AvalonEdit;component/CodeCompletion/CompletionList.xaml" />
+                <ResourceDictionary Source="/ICSharpCode.AvalonEdit;component/CodeCompletion/InsightWindow.xaml" />
                 <ui:ControlsDictionary />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
