--- a/VisualGGPK2/MainWindow.xaml
+++ b/VisualGGPK2/MainWindow.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit"
+    xmlns:search="http://icsharpcode.net/sharpdevelop/avalonedit"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     x:Name="MainFluentWindow"
     Title="VisualGGPK2"
@@ -28,6 +29,145 @@
 
     <Window.Resources>
         <ResourceDictionary>
+            <!--  Avalon Edit  -->
+            <Style TargetType="{x:Type avalonedit:LineNumberMargin}">
+                <Setter Property="Control.Cursor" Value="/ICSharpCode.AvalonEdit;component/themes/RightArrow.cur" />
+            </Style>
+
+            <Style TargetType="search:SearchPanel">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type search:SearchPanel}">
+                            <Border
+                                Margin="0,0,10,0"
+                                HorizontalAlignment="Right"
+                                VerticalAlignment="Top"
+                                Background="Transparent"
+                                BorderBrush="#FFD8D8D8"
+                                BorderThickness="1"
+                                CornerRadius="3,3,3,3"
+                                Cursor="Arrow">
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBox
+                                        Name="PART_searchTextBox"
+                                        Width="200"
+                                        Height="25"
+                                        MinWidth="200"
+                                        MinHeight="25"
+                                        Margin="2,2,2,2"
+                                        Padding="0"
+                                        VerticalContentAlignment="Center"
+                                        Focusable="True"
+                                        FontFamily="Verdana"
+                                        Foreground="Black">
+                                        <TextBox.Text>
+                                            <Binding
+                                                Path="SearchPattern"
+                                                RelativeSource="{RelativeSource TemplatedParent}"
+                                                UpdateSourceTrigger="PropertyChanged">
+                                                <Binding.ValidationRules>
+                                                    <ExceptionValidationRule />
+                                                </Binding.ValidationRules>
+                                            </Binding>
+                                        </TextBox.Text>
+                                    </TextBox>
+                                    <search:DropDownButton
+                                        Height="35"
+                                        Margin="0"
+                                        Padding="0"
+                                        Background="Transparent"
+                                        FontFamily="Verdana"
+                                        FontSize="12"
+                                        Foreground="Black">
+                                        <search:DropDownButton.DropDownContent>
+                                            <Popup
+                                                Name="PART_dropdownPopup"
+                                                Width="145"
+                                                Height="110"
+                                                MinWidth="145"
+                                                MinHeight="110"
+                                                Margin="0,5,0,0"
+                                                OpacityMask="#FFE0E0E0"
+                                                Placement="Center"
+                                                PopupAnimation="Fade"
+                                                StaysOpen="False">
+                                                <Border
+                                                    Background="Transparent"
+                                                    BorderBrush="#FFD8D8D8"
+                                                    BorderThickness="1">
+                                                    <StackPanel Background="White" Orientation="Vertical">
+                                                        <CheckBox
+                                                            Margin="2"
+                                                            HorizontalContentAlignment="Stretch"
+                                                            VerticalContentAlignment="Stretch"
+                                                            BorderBrush="#FFD8D8D8"
+                                                            Content="Match Case"
+                                                            Foreground="Black"
+                                                            IsChecked="{Binding MatchCase, RelativeSource={RelativeSource TemplatedParent}}" />
+                                                        <CheckBox
+                                                            Width="20"
+                                                            Height="20"
+                                                            Margin="2"
+                                                            HorizontalContentAlignment="Stretch"
+                                                            VerticalContentAlignment="Stretch"
+                                                            BorderBrush="#FFD8D8D8"
+                                                            Content="Match Whole"
+                                                            Foreground="Black"
+                                                            IsChecked="{Binding WholeWords, RelativeSource={RelativeSource TemplatedParent}}" />
+                                                        <CheckBox
+                                                            Width="20"
+                                                            Height="20"
+                                                            Margin="2"
+                                                            HorizontalContentAlignment="Stretch"
+                                                            VerticalContentAlignment="Stretch"
+                                                            BorderBrush="#FFD8D8D8"
+                                                            Content="Use Regex"
+                                                            Foreground="Black"
+                                                            IsChecked="{Binding UseRegex, RelativeSource={RelativeSource TemplatedParent}}" />
+                                                    </StackPanel>
+                                                </Border>
+                                            </Popup>
+                                        </search:DropDownButton.DropDownContent>
+                                    </search:DropDownButton>
+                                    <ui:Button
+                                        Width="30"
+                                        Height="30"
+                                        MinWidth="30"
+                                        MinHeight="30"
+                                        Margin="2"
+                                        Command="search:SearchCommands.FindPrevious"
+                                        Foreground="Black"
+                                        Icon="{ui:SymbolIcon ArrowPrevious24}"
+                                        ToolTip="{Binding Localization.FindPreviousText, RelativeSource={RelativeSource TemplatedParent}}" />
+                                    <ui:Button
+                                        Width="30"
+                                        Height="30"
+                                        Margin="2"
+                                        Command="search:SearchCommands.FindNext"
+                                        Foreground="Black"
+                                        Icon="{ui:SymbolIcon ArrowNext24}"
+                                        ToolTip="{Binding Localization.FindNextText, RelativeSource={RelativeSource TemplatedParent}}" />
+                                    <ui:Button
+                                        Width="40"
+                                        Height="30"
+                                        Margin="5,2,10,2"
+                                        HorizontalAlignment="Right"
+                                        VerticalAlignment="Top"
+                                        HorizontalContentAlignment="Center"
+                                        VerticalContentAlignment="Center"
+                                        Command="search:SearchCommands.CloseSearchPanel"
+                                        Focusable="False"
+                                        Foreground="Black"
+                                        Icon="{ui:SymbolIcon ArrowExit20}" />
+                                </StackPanel>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+            <!--  end Avalon Edit  -->
+
+
             <!--  TreeView Style  -->
             <Style x:Key="TreeViewStyle" TargetType="{x:Type TreeView}">
                 <Setter Property="FocusVisualStyle" Value="{x:Null}" />
@@ -329,9 +469,16 @@
             </Grid.ColumnDefinitions>
 
             <Rectangle Grid.Column="0" Fill="WhiteSmoke" />
-            <Rectangle Grid.Column="1" Fill="#f8f8f8" Stroke="#FFD8D8D8" />
+            <Rectangle
+                Grid.Column="1"
+                Margin="0,0,0,-1"
+                Fill="#f8f8f8"
+                Stroke="#FFD8D8D8" />
             <Rectangle Grid.Column="2" Fill="White" />
-            <GridSplitter Grid.Column="1" Width="5" Background="#FFE8E8E8" />
+            <GridSplitter
+                Grid.Column="1"
+                Width="5"
+                Background="#FFE8E8E8" />
 
             <StackPanel Grid.Column="0" Orientation="Vertical">
                 <ui:Button
@@ -432,7 +579,7 @@
                     HorizontalAlignment="Center"
                     VerticalAlignment="Bottom">
                     <Run FontWeight="Black" Foreground="Gray">
-                        v1.8
+                        v1.8.3
                     </Run>
                 </ui:TextBlock>
                 <ui:Image
@@ -453,9 +600,9 @@
                 Height="35"
                 Margin="0,0,5,0"
                 VerticalAlignment="Top"
-                Background="WhiteSmoke"
                 HorizontalContentAlignment="Left"
                 VerticalContentAlignment="Center"
+                Background="WhiteSmoke"
                 FontSize="14"
                 KeyDown="SearchBox_KeyDown"
                 PlaceholderText="search..." />
